==============
lxml changelog
==============

2.2.5 (?)
==================

Features added
--------------

* Support for running XSLT extension elements on the input root node
  (e.g. in a template matching on "/").

Bugs fixed
----------

* Support recent versions of html5lib by not requiring its
  ``XHTMLParser`` in ``htmlparser.py`` anymore.

* Manually instantiating the custom element classes in
  ``lxml.objectify`` could crash.

* Invalid XML text characters were not rejected by the API when they
  appeared in unicode strings directly after non-ASCII characters.

* lxml.html.open_http_urllib() did not work in Python 3.

* The functions ``strip_tags()`` and ``strip_elements()`` in
  ``lxml.etree`` did not remove all occurrences of a tag in all cases.

* Crash in XSLT extension elements when the XSLT context node is not
  an element.


2.2.4 (2009-11-11)
==================

Bugs fixed
----------

* Static build of libxml2/libxslt was broken.


2.2.3 (2009-10-30)
==================

Features added
--------------

Bugs fixed
----------

* The ``resolve_entities`` option did not work in the incremental feed
  parser.

* Looking up and deleting attributes without a namespace could hit a
  namespaced attribute of the same name instead.

* Late errors during calls to ``SubElement()`` (e.g. attribute related
  ones) could leave a partially initialised element in the tree.

* Modifying trees that contain parsed entity references could result
  in an infinite loop.

* ``ObjectifiedElement.__setattr__`` created an empty-string child
  element when the attribute value was rejected as a
  non-unicode/non-ascii string

* Syntax errors in ``lxml.cssselect`` could result in misleading error
  messages.

* Invalid syntax in CSS expressions could lead to an infinite loop in
  the parser of ``lxml.cssselect``.

* CSS special character escapes were not properly handled in
  ``lxml.cssselect``.

* CSS Unicode escapes were not properly decoded in ``lxml.cssselect``.
